# python_modules

./: README.md
Module00/: README.md
Module00/ex00/: answers.txt  requirements.txt
Module00/ex01/: exec.py
Module00/ex02/: whois.py
Module00/ex03/: count.py
Module00/ex04/: operations.py
Module00/ex05/: kata00.py  kata01.py  kata02.py  kata03.py  kata04.py
Module00/ex06/: recipe.py
Module00/ex07/: filterwords.py
Module00/ex08/: sos.py
Module00/ex09/: guess.py
Module00/ex10/: loading.py
Module01/: README.md
Module01/ex00/: book.py  recipe.py  test.py
Module01/ex01/: game.py
Module01/ex02/: test.py  vector.py
Module01/ex03/: generator.py
Module01/ex04/: eval.py
Module01/ex05/: test_3.py  the_bank.py
Module02/: README.md
Module02/ex00/: ft_filter.py  ft_map.py  ft_reduce.py
Module02/ex01/: main.py
Module02/ex02/: logger.py
Module02/ex03/: csvreader.py
Module02/ex04/: README.md  build.sh  pyproject.toml  setup.py
Module02/ex04/src/my_minipack/: __init__.py  logger.py  progress.py  progressbar.py
Module02/ex04/tests/: test.py
Module02/ex05/: TinyStatistician.py
Module03/: README.md
Module03/ex00/: NumPyCreator.py
Module03/ex01/: ImageProcessor.py
Module03/ex02/: ScrapBooker.py
Module03/ex03/: ColorFilter.py
Module03/ex04/: Kmeans.py
Module04/: README.md
Module04/ex00/: FileLoader.py
Module04/ex01/: FileLoader.py  YoungestFellah.py
Module04/ex02/: FileLoader.py  ProportionBySport.py
Module04/ex03/: HowManyMedals.py
Module04/ex04/: SpatioTemporalData.py
Module04/ex05/: HowManyMedalsByCountry.py
(+3 files in other folders)
