[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_minipack"
version = "1.0.0"
authors = [{ name = "Ali Zaynoune", email = "alzaynou@student.1337.ma" }]
description = "Howto create a package in python."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "GPLv3"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Students",
    "Topic :: Education",
    "Topic :: HowTo",
    "Topic :: Package",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
